--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     .menu-btn{display:none;background:transparent;border:1px solid rgba(255,255,255,0.04);padding:8px;border-radius:10px;color:var(--muted)}
 
     /* HERO */
-    .hero{min-height:88vh;display:flex;align-items:center;padding-top:72px;background-image: url(/image/nature/IMG_4517.JPG);background-size:cover;background-position:center;position:relative}
+    .hero{min-height:88vh;display:flex;align-items:center;padding-top:72px;background-image: url(https://res.cloudinary.com/ddawcscea/image/upload/v1759185806/IMG_4517_hvedsx.jpg);background-size:cover;background-position:center;position:relative}
     .hero::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg, rgba(0,0,0,0.55), rgba(0,0,0,0.75));}
     .hero-inner{position:relative;z-index:2;display:flex;align-items:center;gap:40px}
     .hero-left{flex:1}
