--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
       <div class="portfolio-grid" id="portfolioGrid" style="margin-top:18px">
         <!-- Wedding -->
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759168810/AGN_0397_ychjqn.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
-         <div class="thumb" data-cat="wedding"><img src="/image/shooting mariage/AGN_0236.png  " alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
-         <div class="thumb" data-cat="wedding"><img src="/image/shooting mariage/AGN_0268.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
+         <!--<div class="thumb" data-cat="wedding"><img src="/image/shooting mariage/AGN_0236.png  " alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
+         <div class="thumb" data-cat="wedding"><img src="/image/shooting mariage/AGN_0268.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>-->
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759189852/AGN_0233_hqroto.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759189852/AGN_0225_zcgbna.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759189847/AGN_0224_pmjd3b.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
@@ -346,19 +346,19 @@
           <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759168839/AGN_0404_lfaqn7.png " alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
        
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759189906/AGN_0225_wufjqf.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
-         <div class="thumb" data-cat="wedding"><img src="/image/mariage/AGN_0820.JPG" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
+         <!--<div class="thumb" data-cat="wedding"><img src="/image/mariage/AGN_0820.JPG" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>-->
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759159124/AGN_0798_mc36cr.jpg" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
-         <div class="thumb" data-cat="wedding"><img src="/image/mariage/AGN_0818.JPG" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
-         <div class="thumb" data-cat="wedding"><img src="/image/mariage/AGN_0762.JPG" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
+        <!--> <div class="thumb" data-cat="wedding"><img src="/image/mariage/AGN_0818.JPG" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
+         <div class="thumb" data-cat="wedding"><img src="/image/mariage/AGN_0762.JPG" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>-->
         
-         <div class="thumb" data-cat="wedding"><img src="/image/mariage/AGN_0737.JPG" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
+         <!--<div class="thumb" data-cat="wedding"><img src="/image/mariage/AGN_0737.JPG" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>-->
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759159124/AGN_0638_l9ek6p.jpg" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
         <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759168813/AGN_0389_ox2gnb.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
-        <div class="thumb" data-cat="wedding"><img src="/image/weeding/AGN_0086_1.png" alt="wedding-2"><div class="overlay"><div class="view">View</div></div></div>
+       <!-- <div class="thumb" data-cat="wedding"><img src="/image/weeding/AGN_0086_1.png" alt="wedding-2"><div class="overlay"><div class="view">View</div></div></div>-->
         <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759168839/AGN_0404_lfaqn7.png" alt="wedding-3"><div class="overlay"><div class="view">View</div></div></div>
-        <div class="thumb" data-cat="wedding"><img src="/image/AGN_0286_1.png" alt="wedding-3"><div class="overlay"><div class="view">View</div></div></div>
+       <!-- <div class="thumb" data-cat="wedding"><img src="/image/AGN_0286_1.png" alt="wedding-3"><div class="overlay"><div class="view">View</div></div></div>
         <div class="thumb" data-cat="wedding"><img src="/image/weeding/AGN_0059.png" alt="wedding-3"><div class="overlay"><div class="view">View</div></div></div>
-        <div class="thumb" data-cat="wedding"><img src="/image/weeding/AGN_0020.png" alt="wedding-3"><div class="overlay"><div class="view">View</div></div></div>
+        <div class="thumb" data-cat="wedding"><img src="/image/weeding/AGN_0020.png" alt="wedding-3"><div class="overlay"><div class="view">View</div></div></div>-->
 
         <!-- Anniversary -->
         <div class="thumb" data-cat="anniversary"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759159005/echrak_cake_albf6y.jpg" alt="anniversary-1"><div class="overlay"><div class="view">View</div></div></div>
