--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
   </style>
 </head>
 <body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 <header id="header">
   <div class="wrap nav">
@@ -336,8 +338,8 @@
       <div class="portfolio-grid" id="portfolioGrid" style="margin-top:18px">
         <!-- Wedding -->
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759168810/AGN_0397_ychjqn.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
-         <!--<div class="thumb" data-cat="wedding"><img src="/image/shooting mariage/AGN_0236.png  " alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
-         <div class="thumb" data-cat="wedding"><img src="/image/shooting mariage/AGN_0268.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>-->
+         <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759221277/AGN_0236_fpsdsz.png  " alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
+         <div class="thumb" data-cat="wedding"><img src="/image/shooting mariage/AGN_0268.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759189852/AGN_0233_hqroto.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759189852/AGN_0225_zcgbna.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
          <div class="thumb" data-cat="wedding"><img src="https://res.cloudinary.com/ddawcscea/image/upload/v1759189847/AGN_0224_pmjd3b.png" alt="wedding-1"><div class="overlay"><div class="view">View</div></div></div>
