--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  *<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>LensArc — Ayoub | Photographer & Videographer</title>
   <meta name="description" content="LensArc by Ayoub — Photographer & Videographer based in Tunisia (Bizerte & Tozeur). Weddings, portraits, couples, product photography." />
 
@@ -206,7 +207,7 @@
   </style>
 </head>
 <body>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 
 <header id="header">
