--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
     .wrap{max-width:var(--maxwidth);margin:0 auto;padding:0 20px}
 
    
-    header{position:fixed;left:0;right:0;top:0;z-index:50;background:linear-gradient(180deg, rgba(0,0,0,0.45), rgba(0,0,0,0.1));backdrop-filter: blur(6px);}
+    header{
+  display: flex;
+  flex-direction: column; /* في الموبايل يجي عمودي */
+  align-items: center;
+  text-align: center;
+;background:linear-gradient(180deg, rgba(0,0,0,0.45), rgba(0,0,0,0.1));backdrop-filter: blur(6px);}
     .nav{height:72px;display:flex;align-items:center;justify-content:space-between}
     .brand{display:flex;align-items:center;gap:10px}
     .logo{font-weight:800;font-size:20px;color:var(--gold)}
@@ -200,8 +205,21 @@
   color: #fff;
   font-size: 14px;
 }
+img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px; /* يعطيها منظر أنظف */
+}
 
-
+@media (max-width: 768px) {
+  .btn btn-primary {
+    width: 100%;
+    font-size: 16px;
+    padding: 12px;
+    margin: 10px 0;
+  }
+}
 
 
   </style>
