--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ img {
 
     <div style="display:flex;gap:10px;align-items:center">
       <a class="btn btn-ghost" href="https://wa.me/22920230" target="_blank" rel="noreferrer">WhatsApp</a>
-      <button class="btn btn-primary" onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Book a Session</button>
+      <!--<button class="btn btn-primary" onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Book a Session</button>-->
     </div>
   </div>
 </header>
